5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1674_1100.log
== TEST (2019-04-25 11:49:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
	elif(c == 5):
		print("garca")
		elif(c == 10):
			print("Animal: Mico-le4ao dourado")
			elif(c == 50):
				print("Animal: Onca-pintada")
				elif(c == 100)
					print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- ERROR:
File "XXXX", line 8
    elif(c == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:49:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
		elif(c == 5):
			print("garca")
			elif(c == 10):
				print("Animal: Mico-le4ao dourado")
				elif(c == 50):
					print("Animal: Onca-pintada")
					elif(c == 100)
						print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- ERROR:
File "XXXX", line 8
    elif(c == 5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:50:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("garca")
elif(c == 10):
	print("Animal: Mico-le4ao dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- ERROR:
File "XXXX", line 14
    elif(c == 100)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:50:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = float(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("garca")
elif(c == 10):
	print("Animal: Mico-le4ao dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- OUTPUT:
100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("garca")
elif(c == 10):
	print("Animal: Mico-le4ao dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("garca")
elif(c == 10):
	print("Animal: Mico-le4ao dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Garca")
elif(c == 10):
	print("Animal: Mico-le4ao dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Garca")
elif(c == 10):
	print("Animal: Mico-leao dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:52:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:52:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- EXECUTION TIME:
0.216301
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:53:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- EXECUTION TIME:
0.183902
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:53:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- EXECUTION TIME:
0.170338
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print(c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print("Entrada:",c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:54:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("insira o valor da nota:"))
print("Entrada:",c)
if (c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
elif(c == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- EXECUTION TIME:
0.226377
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
